apps/homepage/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  selector:
    app: homepage
  ports:
  - port: 80
    targetPort: 3000
