apps/homepage/base/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: homepage-gateway
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: homepage-vs
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
spec:
  hosts:
  - "*"
  gateways:
  - homepage-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: homepage.homepage.svc.cluster.local
        port:
          number: 80
